@@ -1,4 +1,4 @@
 DIST bot-sentry-1.3.0.tar.bz2 280673 RMD160 b36bb4d36410f46115ca7e375e2fdba28749d30b SHA1 bf629d458196fd7f9d6085de28dbfc73f6ce3620 SHA256 e65581328a508a82cd32d246f4037ea3b044eafd223c3c967947f847db28e736
-EBUILD pidgin-botsentry-1.3.0.ebuild 557 RMD160 d7b17c6b0820783d86be458c2129f9d7e45ad7c5 SHA1 9959f7af4a7fe19554e876fa0bfb28c0f36fdf3f SHA256 f17eb162acdc6a0612a2464137a726a713c6acb1d668c3de51a029dc31e8a989
-MISC ChangeLog 436 RMD160 d6157274c07912dd5bda468447f43bdf056b48d6 SHA1 5c6376f95a65b2455a1188944f5492606c89f1a8 SHA256 27bb8a697ce98961b4296a0cf2bfaeb3151e622d81ffbce7d0bb960b27245248
+EBUILD pidgin-botsentry-1.3.0.ebuild 563 RMD160 44f4c3992ff31db5324aa442fb7910a0a69e55e6 SHA1 17941fffb5cdb3467361e435a7dffc14fe32d4eb SHA256 86175fdc773cf97656de6ed3d317f8a437ab28e42c1ca6dc0265347ac829294b
+MISC ChangeLog 622 RMD160 ffae789c0814154681a3ff98893efccaad6c3b9f SHA1 fab791e2db2fa482108c2208719b1c821a352dcf SHA256 e750bf2a04dc9ada649c0fbe4cc42cad51259e0b5ea93044388c8885ee97faef
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
