@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  02 Sep 2009; Romain Perier (mrpouet) <mrpouet@gentoo.org>
+  pidgin-botsentry-1.3.0.ebuild:
+  Unquote MY_P, Quote WORKDIR, Switch to eapi-1 in order to depend upon glib:2
+  in RDEPEND
+
   30 Aug 2009; Russell Harmon (eatnumber1) <russ@eatnumber1.com>
   pidgin-botsentry-1.3.0.ebuild:
   Fixed coding style issues.
